2006-01-21  Dave Morrison

	* bootstrap.pl: add an optional argument to check_host telling us
	whether we are bootstrapping or not

2006-01-03  Daniel Macks  <dmacks@netspace.org>

	* all: updated Copyright notice

2005-12-06  Daniel Macks  <dmacks@netspace.org>

	* fink.8.in, fink.conf.5.in: Clarify --keep-*-dir modes and path
	controls.

2005-12-02  Daniel Macks  <dmacks@netspace.org>

	* fink-virtual-pkgs.in, inject.pl, postinstall.pl.in: We require
	perl >= 5.8.1

2005-11-30  Daniel Macks  <dmacks@netspace.org>

	* bootstrap.pl: We no longer have any perlmod/ packages in bootstrap

2005-11-29  Daniel Macks  <dmacks@netspace.org>

	* bootstrap.pl: We require perl >= 5.8.1
	* fink.info.in: We don't support 10.2-gcc3.3
	* fink.conf.5.in: Sync Distribution field doc with reality

2005-11-14  Daniel Macks  <dmacks@netspace.org>

	* Makefile: Allow PREFIX for 'make install'

2005-11-10  Daniel Macks  <dmacks@netspace.org>

	* .cvsignore, Makefile: fix vim backup-file removal.

2005-11-09  Daniel Macks  <dmacks@netspace.org>

	* bootstrap.pl: case-insensitivity fix

2005-11-08  Daniel Macks  <dmacks@netspace.org>

	* bootstrap.pl: overhaul validation of $basepath entry

2005-10-19  Daniel Macks  <dmacks@netspace.org>

	* fink.8.in: Document the default action when we have both --foo
	and --no-foo flags.

2005-10-19  Daniel Macks  <dmacks@netspace.org>

	* fink.8.in: Document that 'fink plugins' lists of checksum algos.

2005-10-16  Daniel Macks  <dmacks@netspace.org>

	* install.sh: add plugins/Fink/Checksum/*.pm to the install list

2005-10-16  Benjamin Reed <rangerrick@users.sourceforge.net>

	* install.sh: add plugins/Fink/Checksum/ to the install list

2005-10-15  Martin Costabel <costabel@wanadoo.fr>

	* pathsetup.sh.in: Fix two bugs that have been annoying users
	running the Fink binary installer for the first time: 
	The creation of a bash startup script with wrong root ownership, 
	and a wrong failure message.
 
2005-10-12  Daniel Macks  <dmacks@netspace.org>
