@@ -94,6 +94,9 @@ directory for your own purposes,
 but this is not necessary in most circumstances. The default trees are 
 "local/main local/bootstrap stable/main". This list should be kept in sync with 
 .Pa @PREFIX@/etc/apt/sources.list.
+.Pp
+The order of trees is meaningful, as packages from later trees may override
+packages from earlier ones.
 .It Cm Distribution: Ar 10.3 or 10.4-transitional
 Fink needs to know which version of Mac OS X you are running. Mac OS X 10.0 and earlier are not supported, and 10.1 and 10.2 are no longer supported by this version of fink. This field is set by running the
 .Cm @PREFIX@/lib/fink/postinstall.pl
